tests/good/type_parameter_nonrecursive.ppl
{- When a parameterized datatype is applied to itself, we consider it nonrecursive. -}
data box a = Box a;
define copy_mono = \x: box (box Unit). (x, x);
define copy_poly = \x. (x, x);
extern e: box (box Unit);
let x = (Box (Box ())) in (copy_mono x, copy_poly x)
