tests/bad/type_parameter_different.ppl
{- A parameterized datatype can include itself with a different parameter, but is still recursive. -}
data weirdlist a = Nil | Cons a (weirdlist Bool);
define copy_mono = \x: weirdlist. (x, x);
define copy_poly = \x. (x, x);
extern e: weirdlist ();
let x = (Cons () (Cons True Nil)) in (copy_mono x, copy_poly x)

